--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 # Connection url for database 'store'
-spring.datasource.url =jdbc:mysql://localhost:3306/csbe?useTimezone=true&serverTimezone=UTC
+spring.datasource.url = ${url_database}
 
 # Username and Password
-spring.datasource.username = wallef
-spring.datasource.password = wfa4
+spring.datasource.username = ${usuario_banco}
+spring.datasource.password = ${senha_banco}
 
 # Show or not log for each sql query
 spring.jpa.show-sql = true
@@ -11,5 +11,5 @@ spring.jpa.show-sql = true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 spring.jpa.hibernate.ddl-auto= update
 
-security.jwt.expiracao=30
-security.jwt.chave-assinatura=UGFsbWVpcmFzIHRlbSBtdW5kaWFs
+security.jwt.expiracao=${tempo_expiracao}
+security.jwt.chave-assinatura=${chave_assinatura}
